# ECON-208

./: .gitignore  README.md  main.py  pyproject.toml
assignments/: homework_02.ipynb
assignments/.ipynb_checkpoints/: homework_01-checkpoint.ipynb
case_studies/: population_data.ipynb
exam/: exam-students.ipynb  q4_answer.csv
lectures/L01_python_fundamentals/: 01_getting_started.ipynb  01_python_basics.ipynb  02_objects_and_types.ipynb  02_python_collections.ipynb  03_modules.ipynb  03_python_control_flow.ipynb  04_python_functions.ipynb
lectures/L02_pandas_intro/: 01_pandas_intro.ipynb  02_pandas_basics.ipynb
lectures/L03_numpy/: numpy_intro.ipynb  numpy_random.ipynb
lectures/L04_pandas_shape/: reshaping.ipynb  the_index.ipynb
lectures/L05_pandas_clean_merge/: pandas_cleaning.ipynb  pandas_merging.ipynb
lectures/L06_split_apply_combine/: data_formats.ipynb
lectures/L06_visualizations/: ft_plot_practice.ipynb  plotting_intro.ipynb  plotting_libraries.ipynb  visualization_rules.ipynb
lectures/L07_split_apply_combine/: data_formats.ipynb  groupby.ipynb
lectures/L08_apis/: bls_api.ipynb  bls_exploration.ipynb  intro_to_apis.ipynb  intro_to_labor_stats.ipynb
lectures/L09_temporal_and_maps/: maps.ipynb  timeseries.ipynb
lectures/L10_sql/: 01_data_description.ipynb  02_sql.ipynb
lectures/L11_polars/: ais_exploration.ipynb  ais_fetcher.py  pandas_vs_polars.ipynb  polars_intro.ipynb
recording_script/L01_python_fundamentals/: 00_intro.md  01_getting_started.md  02_objects_and_types.md  03_modules.md
syllabus/: econ_208_syllabus.tex
