[project]
name = "econ-208"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numba>=0.63.1",
    "numpy<2.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pandas-datareader>=0.10.0",
    "polars>=1.37.1",
    "quantecon>=0.10.1",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "statsmodels>=0.14.6",
    "yfinance>=1.2.0",
]
