[project]
name = "econ-208"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bokeh>=3.9.0",
    "descartes>=1.1.0",
    "fiona>=1.10.1",
    "folium>=0.20.0",
    "gensim>=4.4.0",
    "geodatasets>=2026.1.0",
    "geopandas>=1.1.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "polars>=1.37.1",
    "pyldavis>=3.4.1",
    "quantecon>=0.11.1",
    "requests>=2.32.5",
    "scipy>=1.17.0",
    "xgboost>=3.2.0",
    "yfinance>=1.2.0",
]
